--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,15 +4,10 @@
   | default @import url()
   |============================
 */
+/* other styles*/
+/* @import url('flatpickr/dist/flatpickr.min.css'); */
+
 /* Common styles */
 @import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
 /* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
