--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,3 +1,7 @@
+:root {
+  --font-family: 'Montserrat', sans-serif;
+}
+
 @media screen {
   .container {
     max-width: 320px;
@@ -14,10 +18,45 @@
     display: flex;
     flex-direction: column;
   }
+  .date-input {
+    margin-bottom: 32px;
+  }
 }
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+  }
+  .date-input {
+    width: 272px;
+    height: 40px;
+    margin-right: 8px;
+    border-radius: 4px;
+    border: 1px solid #808080;
+
+    background: #fff;
+
+    font-size: 16px;
+
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    padding: 8px 0px 8px 16px;
+
+    font-family: var(--font-family);
+  }
+  .button-input {
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 75px;
+    height: 40px;
+    background: #4e75ff;
+    font-weight: 500;
+    font-size: 16px;
+
+    /* line-height: 24px; */
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
   }
 }
 
